--- a/bAdventurousTourist/Info.plist
+++ b/bAdventurousTourist/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>bluetooth-central</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -37,7 +41,7 @@
 
 “We use low-energy Bluetooth and iBeacon devices installed at the airport to find you inside the hall, and provide relevant information. You don’t need to know security wait times when you’re already at the gate, do you?”
 
-“We use low-energy Bluetooth and iBeacon devices installed at the airport to find you inside the hall, and provide relevant information."
+“We use low-energy Bluetooth and iBeacon devices installed at the airport to find you inside the hall, and provide relevant information.&quot;
 
 </string>
 	<key>UILaunchStoryboardName</key>
